added a few new features and improved the ui

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="wonderChat">
-            <h1>Wonder Chat</h1>
+            <h1>Ninja Chat</h1>
             <div class="chatWindow">
                 <ul id="chatline"></ul>
                 <div id="feedback"></div>
@@ -15,14 +15,13 @@
             <div class="input">
                 <input id="username" type="text" placeholder="Enter a username" /> 
                 <select id="color">
+                    <option value="default">Default</option>
                     <option value="white">White</option>
-                    <option value="firebrick">Red</option>
-                    <option value="orange">Orange</option>
-                    <option value="gold">Yellow</option>
-                    <option value="palegreen">Green</option>
-                    <option value="deepskyblue">Blue</option>
-                    <option value="mediumslateblue">Purple</option>
-                    <option value="violet">Pink</option>
+                    <option value="#FF355E">Red</option>
+                    <option value="#FFCC33">Orange</option>
+                    <option value="#FFFF66">Yellow</option>
+                    <option value="#66FF66">Green</option>
+                    <option value="#FF6EFF">Violet</option>
                 </select>
                 <input id="message" type="text" placeholder="Enter a message"/>
                 <button id="send">Send</button>
